[package]
name = "succinct_rs"
version = "0.1.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
description = "Succinct Data Structures library for Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/laysakura/succinct.rs"
homepage = "https://github.com/laysakura/succinct.rs"
edition = "2018"

[dependencies]

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "succinct_bit_vector_bench"
harness = false